--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,3 +1,20 @@
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit; 
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    text-decoration: none;
+}
+
+html {
+    font-size: 62.5%;
+}
+
 body {
-    background-color: purple;
+    box-sizing: border-box;
 }
