--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -11,6 +11,13 @@
     text-decoration: none;
 }
 
+:root {
+	--background: #8afcd6;
+	--primary: #0A1D29;
+	--secondary: #030a50;
+	--third: #2aca95;
+}
+
 html {
     font-size: 62.5%;
 }
