--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import 'base/normalize';
 
 @import 'abstracts/functions';
+@import 'abstracts/placeholders';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
 
@@ -8,3 +9,5 @@
 @import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
+
+@import 'components/buttons';
