--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -6,30 +6,32 @@
         font-size: 1.5rem;
         font-weight: 600;
         text-transform: uppercase;
-        border: .3rem solid var(--color-secondary-dark);
-        color: var(--color-white);
+        border: .3rem solid $color-secondary-dark;
+        // color: $color-white);
+        color: $color-white;
         cursor: pointer;
         user-select: none;
         background: linear-gradient(
             120deg,
             transparent 0%,
             transparent 50%,
-            var(--color-secondary-dark) 50%,
+            $color-secondary-dark 50%,
         );
         background-size: 220%;
         transition: all .5s cubic-bezier(0.77, 0, 0.175, 1);
+        box-shadow: 0 .2rem .4rem rgba($color-black, .2);
     }
 
     &:hover{
         background-position: right;
-        color: var(--color-primary-dark);
-        transform: translate(var(--color-primary-light)em,-.3rem);
-        box-shadow: 0 1rem 2rem rgba(var(--color-black) 0.2);
+        color: $color-primary-dark;
+        transform: translate(.2em,-.3rem);
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
     }
 
     &:active {
         transform: translate(-.1rem, .1rem);
-        box-shadow: 0 .5rem 1rem rgba(var(--color-black), 0.2);
+        box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
 
     &--s {
