--- a/app/_components/floating-box/floating-box.scss
+++ b/app/_components/floating-box/floating-box.scss
@@ -1,4 +1,3 @@
-
 ul.floating-boxes {
     position: absolute;
     top: 0;
@@ -14,13 +13,13 @@ ul.floating-boxes {
         width: 2rem;
         background-image: linear-gradient(
             135deg,
-            var(--color-primary-dark),
-            var(--color-white)
+            $color-primary-dark,
+            $color-white
         );
         border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-        box-shadow: inset 0 0 2rem var(--color-white), inset 1rem 0 4.6rem #eaf5fc,
+        box-shadow: inset 0 0 2rem $color-white, inset 1rem 0 4.6rem #eaf5fc,
           inset 8.8rem 0px 6rem #c2d8fe, inset -2rem -6rem 10rem #fde9ea,
-          inset 0 5rem 14rem #fde9ea, 0 0 9rem var(--color-white);
+          inset 0 5rem 14rem #fde9ea, 0 0 9rem $color-white;
         opacity: 0;
         animation: floatingbox 10s ease-in-out infinite;
 
