--- a/app/_components/navbar/navbar.scss
+++ b/app/_components/navbar/navbar.scss
@@ -15,13 +15,13 @@
         position: relative;
         padding: 0 2rem;
         font-size: 1.5rem;
-        color: var(--color-white);
+        color: $color-white;
         font-weight: 600;
         text-transform: uppercase;
     }
 
     &__heading {
-        color: var(--color-white);
+        color: $color-white;
         font-size: 1.5rem;
         letter-spacing: .3rem;
         font-weight: 600;
@@ -34,7 +34,7 @@
             position: relative;
             padding: 0 2rem;
             font-size: 1.5rem;
-            color: var(--color-white);
+            color: $color-white;
             font-weight: 600;
             text-transform: uppercase;
     
@@ -42,14 +42,14 @@
                 content: '';
                 width: 0;
                 height: .2rem;
-                background: var(--color-secondary-light);
+                background: $color-secondary-light;
                 position: absolute;
                 bottom: -.5rem;
                 transition: all .5s;
             }
     
             &:hover  {
-                color: var(--color-secondary-light);
+                color: $color-secondary-light;
     
                 &::before {
                     width: 50%; 
