--- a/styles/base/_normalize.scss
+++ b/styles/base/_normalize.scss
@@ -208,6 +208,7 @@ button {
 	margin: 0;
 	overflow: visible;
 	text-transform: none;
+	appearance: button;
 	-webkit-appearance: button;
 	&::-moz-focus-inner {
 		border-style: none;
@@ -245,6 +246,7 @@ textarea {
 	overflow: auto;
 }
 [type="button"] {
+	appearance: button;
 	-webkit-appearance: button;
 	&::-moz-focus-inner {
 		border-style: none;
@@ -255,6 +257,7 @@ textarea {
 	}
 }
 [type="reset"] {
+	appearance: button;
 	-webkit-appearance: button;
 	&::-moz-focus-inner {
 		border-style: none;
@@ -265,6 +268,7 @@ textarea {
 	}
 }
 [type="submit"] {
+	appearance: button;
 	-webkit-appearance: button;
 	&::-moz-focus-inner {
 		border-style: none;
@@ -305,6 +309,7 @@ progress {
 	}
 }
 [type="search"] {
+	appearance: textfield;
 	-webkit-appearance: textfield;
 	outline-offset: -2px;
 	&::-webkit-search-decoration {
