--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -1,5 +1,5 @@
 h1 {
-    color: var(--color-white);
+    color: $color-white;
     font-size: 2.5rem;
     font-weight: 700;
     letter-spacing: .3rem;
@@ -9,8 +9,8 @@ h1 {
 
 h2 {
     background-clip: text;
-    background: -webkit-linear-gradient(45deg, var(--color-secondary-dark), var(--color-secondary-light));
-    color: var(--color-white);
+    background: -webkit-linear-gradient(45deg, $color-secondary-dark, $color-secondary-light);
+    color: $color-white;
     font-size: 2rem;
     font-weight: 500;
     letter-spacing: .2rem;
