--- a/app/_components/about/about.scss
+++ b/app/_components/about/about.scss
@@ -1,21 +1,28 @@
 .about {
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
     background-color: $color-primary-dark;
+    // overflow: visible;
 
-    h2 {
-        padding-bottom: 4rem;
+    
+    &__content {
+        h2 {
+            padding-bottom: 4rem;
+        }
+
+        background: $color-white;
+        display: flex;   
     }
 
-    &__content {
-        width: 80rem;
-        height: 50rem;
-        background: $color-white;
-        display: flex;
-        
+    &__image {
+        width: 50%;
+        height: 50%;
+        background: url(./profile.jpg);
+        background-size: cover;
+        background-position: center;
+        @extend %flex-center;
+        // clip-path: circle(90% at 92% 50%);
     }
 }
