--- a/app/_components/navbar/navbar.scss
+++ b/app/_components/navbar/navbar.scss
@@ -6,18 +6,11 @@
     height: 5rem;
     background: transparent;
     z-index: 3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 3rem 5%;
 
-    & a {
-        position: relative;
-        padding: 0 2rem;
-        font-size: 1.5rem;
-        color: $color-white;
-        font-weight: 600;
-        text-transform: uppercase;
+    &__settings {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
     }
 
     &__heading {
@@ -29,32 +22,6 @@
     }
     
     &__links-box {
-        
-        a {
-            position: relative;
-            padding: 0 2rem;
-            font-size: 1.5rem;
-            color: $color-white;
-            font-weight: 600;
-            text-transform: uppercase;
-    
-            &::before {
-                content: '';
-                width: 0;
-                height: .2rem;
-                background: $color-secondary-light;
-                position: absolute;
-                bottom: -.5rem;
-                transition: all .5s;
-            }
-    
-            &:hover  {
-                color: $color-secondary-light;
-    
-                &::before {
-                    width: 50%; 
-                }
-            }
-        }
+        @extend %flex-center;
     }
 }
