--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -18,3 +18,9 @@ html {
 body {
     box-sizing: border-box;
 }
+
+header, section {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+}
