--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,10 +6,12 @@
 @import 'abstracts/mixins';
 @import 'abstracts/functions';
 
+@import 'base/grid';
 @import 'base/animations';
 @import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
 
 @import 'components/buttons';
+@import 'components/links';
 
