--- a/app/_components/about/about.scss
+++ b/app/_components/about/about.scss
@@ -19,29 +19,51 @@
     &__image {
         width: 50%;
         height: 50%;
-        // background: url(./profile.jpg);
+        margin: 0 auto;
+        
+        // background: red;
+        background-image: url('https://picsum.photos/id/1011/250/250');
         background-size: cover;
         background-position: center;
-        @extend %flex-center;
-        // clip-path: circle(90% at 92% 50%);
-        img {
-            --gradient: 10% /45% 45% no-repeat linear-gradient(#000 0 0);
-            --mask:
-              left   var(--_position,0%) top    var(--gradient),
-              bottom var(--_position,0%) left   var(--gradient),
-              top    var(--_position,0%) right  var(--gradient),
-              right  var(--_position,0%) bottom var(--gradient);
-            -webkit-mask: var(--mask);
-                    mask: var(--mask);
-            filter: grayscale(80);
-            transition: .3s linear;
-            cursor: pointer;
-          }
+        // @extend %flex-center;
+        // overflow: hidden;
+        // filter: grayscale(80);
+        transition: .3s linear;
+        cursor: pointer;
+        border-radius: 1rem;
+        transform-style: preserve-3d;
+        transform: perspective(5000px) rotateY(var(--rotateX)) rotateX(var(--rotateY));
+        transition: all var(--delay);
+        
+        &::before,
+        &::after {
+          content: '';
+          position: absolute;
+          border-radius: inherit;
+        }
 
-          img:hover {
-            --_position: 10%;
-            filter: grayscale(0);
-          }
+        &::before {
+          inset: 0.75rem;
+          border-radius: inherit;
+          background: black;
+          z-index: -1;
+          transform: translateZ(-50px);
+          filter: blur(15px);
+          opacity: 0.5;
+        }
+        
+        /* gradient thingy */
+        &::after {
+          z-index: -2;
+          inset: -1rem;
+          background: linear-gradient(-45deg, $color-secondary-light, $color-secondary-dark);
+          transform: translateZ(-50px);
+        }
+
+
           
-    }
+        &:hover {
+          // filter: grayscale(0)
+        }
+     }
 }
