--- a/app/_components/about/about.scss
+++ b/app/_components/about/about.scss
@@ -1,39 +1,60 @@
 .about {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // flex-direction: column;
-    background-color: $color-primary-dark;
-    // overflow: visible;
+  background-color: $color-primary-dark;
 
-    
     &__content {
-        h2 {
-            padding-bottom: 4rem;
-        }
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: $color-white;
+      text-align: center;
+      position: relative;
+      overflow: hidden;
+      border-radius: 5px;
+      padding: .4rem;
+      max-width: 440px;
+      
+      &-text {
+        padding: 1.5rem;
+        background-color: $color-primary-dark;
+        border-radius: 5px;
+        z-index: 2;
+      }
 
-        background: $color-white;
-        display: flex;   
+      &::before {
+        content: '';
+        position: absolute;
+        width: 35%;
+        display: block;
+        background-image: linear-gradient(90deg, transparent, $color-secondary-dark, transparent);
+        height: 100vw;
+        animation: completeRotate 4.5s linear infinite;
+        z-index: 1;
+      }
+
+      h2 {
+          padding: 2rem 0;
+      }
+
+      p {
+        font-size: 1.5rem;
+        padding: 2rem 0;
+        text-align: justify;
+        text-justify: inter-word;
+      }
     }
 
     &__image {
         width: 50%;
         height: 50%;
         margin: 0 auto;
-        
-        // background: red;
         background-image: url('https://picsum.photos/id/1011/250/250');
         background-size: cover;
         background-position: center;
-        // @extend %flex-center;
-        // overflow: hidden;
-        // filter: grayscale(80);
         transition: .3s linear;
         cursor: pointer;
         border-radius: 1rem;
-        transform-style: preserve-3d;
-        transform: perspective(5000px) rotateY(var(--rotateX)) rotateX(var(--rotateY));
-        transition: all var(--delay);
         
         &::before,
         &::after {
@@ -52,18 +73,13 @@
           opacity: 0.5;
         }
         
-        /* gradient thingy */
         &::after {
           z-index: -2;
           inset: -1rem;
           background: linear-gradient(-45deg, $color-secondary-light, $color-secondary-dark);
           transform: translateZ(-50px);
         }
-
-
-          
-        &:hover {
-          // filter: grayscale(0)
-        }
      }
+
 }
+
