--- a/app/_components/parallax/parallax.scss
+++ b/app/_components/parallax/parallax.scss
@@ -1,8 +1,24 @@
 .parallax {
     height: 50vh;
-    // width: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: purple;
+    background:url(./background-parallax.jpg), rgba($color-primary-dark, .6);
+    position: relative;
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+
+    h2{
+               /* borde de texto */
+            //    -webkit-text-fill-color: rgba(0,0,0,.1);
+            //    -webkit-text-stroke: 5px #000;
+               font-weight: 600;
+               font-size: 4rem;
+            //    background: rgba(0,0,0,.1);
+    }
+    // backdrop-filter: sepia(90%);
 }
