--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -10,12 +10,17 @@ h1 {
 h2 {
     background-clip: text;
     background: -webkit-linear-gradient(45deg, $color-secondary-dark, $color-secondary-light);
-    color: $color-white;
     font-size: 2rem;
     font-weight: 500;
     letter-spacing: .2rem;
     text-transform: uppercase;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    transition: all .5s;
+
+    &:hover {
+        transform: scale(1.1);
+        text-shadow:   2px 2px 8px #000;
+    }
 }
 
