--- a/styles/abstracts/_placeholders.scss
+++ b/styles/abstracts/_placeholders.scss
@@ -3,3 +3,17 @@
     align-items: center;
     justify-content: center;
 }
+
+
+%ribbon {
+    content: '';
+    position: absolute;
+    top: 1rem;
+    left: -8rem;
+    width: 120%;
+    height: 15%;
+    -webkit-box-shadow: 5px 12px 21px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 12px 21px -3px rgba(0,0,0,0.75);
+    box-shadow: 5px 12px 21px -3px rgba(0,0,0,0.75);
+    transform: rotate(-45deg)
+}
