--- a/styles/base/_grid.scss
+++ b/styles/base/_grid.scss
@@ -9,8 +9,9 @@
     &--center {
         width: 90%;
         margin: 0 auto;
-        // justify-items: center;
+        justify-items: center;
     }
+
 }
 
 
