--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -9,7 +9,7 @@ h1 {
 
 h2 {
     background-clip: text;
-    background: -webkit-linear-gradient(45deg, $color-secondary-dark, $color-secondary-light);
+    background: $gradient-secondary;
     font-size: 2rem;
     font-weight: 500;
     letter-spacing: .2rem;
@@ -24,3 +24,22 @@ h2 {
     }
 }
 
+.text--section {
+    text-align: center;
+    padding-top: 5rem;
+}
+
+.text--center {
+    width: 100%;
+    text-align: center;
+}
+
+
+@each $name, $gradient in $gradients {
+    .text-grad--#{$name} {
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-image: $gradient;
+    }
+}
