--- a/styles/base/_utilities.scss
+++ b/styles/base/_utilities.scss
@@ -1,1 +1,7 @@
 .w-full { width: 100% }
+
+@each $name, $gradient in $gradients {
+    .bg-grad--#{$name} {
+        background-image: $gradient;
+    }
+}
