--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -24,6 +24,15 @@ h2 {
     }
 }
 
+
+p {
+    font-size: 1.5rem;
+    padding: 2rem 0;
+    text-align: justify;
+    text-justify: inter-word;
+    color: $color-white;
+}
+
 .text--section {
     text-align: center;
     padding-top: 5rem;
