Card-lumpy: start

--- a/app/_components/cardRotate/card-rotate.scss
+++ b/app/_components/cardRotate/card-rotate.scss
@@ -1,10 +1,5 @@
-.skill {
-    width: 100%;
-    height: 100vh;
-    background: $color-primary-dark;
-}
 
-.card {
+.card-rotate {
     width: 30rem;
     height: 40rem;
     align-self: start;
