--- a/app/_components/project/project.scss
+++ b/app/_components/project/project.scss
@@ -12,9 +12,9 @@
     }
 
     &__container {
-        display: grid;
+        // display: grid;
         width: 90%;
         height: 80%;
-        background: $color-secondary-dark;
+        // background: $color-secondary-dark;
     }
 }
