--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -41,8 +41,7 @@ $gradient-tertiary: linear-gradient(
   );
 
 $gradients: (
-    "primary": $gradient-primary,
-    "primary-2": $gradient-primary-2,
+    "primary": $gradient-primary-2,
     "secondary": $gradient-secondary,
     "tertiary": $gradient-tertiary,
 );
