--- a/app/_components/project/project.scss
+++ b/app/_components/project/project.scss
@@ -1,20 +1,20 @@
 .project {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background: $color-primary-dark;
+    height: inherit;
 
     h2 {
-        padding: 4rem;
+        padding-bottom: 3rem;
     }
 
     &__container {
-        // display: grid;
-        width: 90%;
-        height: 80%;
-        // background: $color-secondary-dark;
+        width: 100%;
+        // height: calc(100vh - 10rem);
+        // background: red;
+        overflow: visible;
+        display: grid;
+        grid-template-columns:  repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-gap: 2rem;
+        justify-content: center;
+
     }
 }
