--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -27,7 +27,6 @@ h2 {
 
 p {
     font-size: 1.5rem;
-    padding: 2rem 0;
     text-align: justify;
     text-justify: inter-word;
     color: $color-white;
@@ -43,6 +42,10 @@ p {
     text-align: center;
 }
 
+.text--left {
+    width: 100%;
+    text-align: left;
+}
 
 @each $name, $gradient in $gradients {
     .text-grad--#{$name} {
