--- a/styles/base/_utilities.scss
+++ b/styles/base/_utilities.scss
@@ -5,3 +5,10 @@
         background-image: $gradient;
     }
 }
+
+
+@each $name, $color in $color-badges {
+    .bg--#{$name} {
+        background: $color;
+    }
+}
