--- a/styles/modules/variables.module.scss
+++ b/styles/modules/variables.module.scss
@@ -11,4 +11,9 @@
     colorGithub: $color-github;
     colorFacebook: $color-facebook;
     colorInstragram: $color-instragram;
+    // colorReact: $color-react;
+    // colorNode: $color-node;
+    // colorRedux: $color-redux;
+    // colorTypescript: $color-typescript;
+    // colorMongo: $color-mongo;
 }
