--- a/app/_components/cardLumpy/card-lumpy.scss
+++ b/app/_components/cardLumpy/card-lumpy.scss
@@ -26,7 +26,7 @@
 }
 
 // $color-card: #6b04ff;   
-$color-card: $color-primary-dark-2;
+$color-card: $color-secondary-dark;
 // $color-card: $color-white;
 $duration: 0.5s;
 $lag-duration: calc($duration * 1.5);
@@ -91,7 +91,7 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
         height: 10vmin;
         position: absolute;
         bottom: -5vmin;
-        background-color: $color-secondary-dark;
+        background-color: $color-primary-dark-2;
         color: $color-black;
         box-shadow: 0 2vmin 2vmin rgba(0, 0, 0, 0.2);
         transition: transform calc($duration / 2) $easing;
@@ -138,8 +138,6 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
             align-items: center;
             justify-content: flex-start;
             flex-direction: column;
-
-            
         }
 
         &-image {
@@ -150,10 +148,6 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
             background-repeat: no-repeat;
             background-position: center;
             z-index: 40;
-            // -webkit-box-shadow: -1px -1px 9px 2px rgba(0,0,0,0.3);
-            // -moz-box-shadow: -1px -1px 9px 2px rgba(0,0,0,0.3);
-            // box-shadow: -1px -1px 9px 2px rgba(0,0,0,0.3);
-            // background-blend-mode: multiply;
             filter: grayscale(8);
             transition: all .5s;
             cursor: pointer;
@@ -165,29 +159,38 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
 
         }
 
-        h3 {
-            position: relative;
-            padding-left: 1rem;
-            padding-top: 1rem;
-            font-size: 1.7rem;
-            text-transform: uppercase;
-            color: $color-secondary-light;
+        &-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
 
-            &::before {
-                content: '';
-                position: absolute;
-                bottom: -.4rem;
-                left: 0;
-                width: 98%;
-                height: .1rem;
-                background: currentColor;
+            h3 {
+                
+                position: relative;
+                padding-left: 1rem;
+                padding-top: 1rem;
+                font-size: 1.7rem;
+                text-transform: uppercase;
+                color: $color-white;
+                
+                
+                &::before {
+                    content: '';
+                    position: absolute;
+                    bottom: -.4rem;
+                    left: 1rem;
+                    width: 100%;
+                    height: .1rem;
+                    background: currentColor;
+                }
             }
         }
 
         p {
             padding: .5rem 1rem 1rem 1rem;
             font-size: 1.4rem;
-            color: $color-secondary-light;
+            color: $color-white;
             font-weight: 550;
             text-align: left;
         }
@@ -211,19 +214,20 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
         transform: translateY(-120%);
         transition: transform $duration $easing;
         filter: url(#lumpy);
+        background: $color-card;
         // padding: 1rem;
 
         
         &-content {
-            padding: 1rem;
+            padding: 1.5rem 1rem;
             width: 100%;
             height: 100%;
             z-index: 3;
             overflow: hidden;
             display: flex;
             align-items: center;
-            justify-content: flex-start;
-            flex-direction: column;
+            justify-content: center;
+            flex-wrap: wrap;
             opacity: 0;
             transform: translateY(-80%);
             transition: all $duration $easing;
@@ -279,4 +283,101 @@ $easing: cubic-bezier(0.7, 0, 0.2, 1);
 		height: 12vmin;
 	}
 }
+
+.badge {
+    font-size: 1.2rem;
+    padding: .5rem .7rem;
+    border-radius: 1rem;
+    display: inline;
+    font-weight: 500;
+    transition: all .2s;
+    margin: .3rem;
+    box-shadow: -5px -1px 14px -3px rgba(0,0,0,0.75);
+    color: $color-white;
+
+    &:hover {
+        font-weight: 700;
+    }
+}
+
+
+.bagde__container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    // width: 100%;
+    // height: 100%;
+}
+
+.icon__container {
+    // position: relative;
+    margin-right: .5rem;
+    margin-top: .5rem;
+    // margin-bottom: .5rem;
+    background: $color-primary-dark-2;
+    padding: .5rem;
+    width: 50%;
+    border-radius: .5rem;
+    cursor: pointer;
+    transition: all .1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    
+    &:hover {
+        box-shadow: -4px 2px 13px -3px rgba(0,0,0,0.75);
+        transform: scale(1.05);
+        background: $color-primary-dark;
+    }
+
+    &:nth-child(1) {
+        margin-right: .1rem;
+    }
+}
+
+
+// .tooltip {
+//     position: absolute;
+//     top: 0;
+//     left: 50%;
+//     transform: translateX(-50%);
+//     padding: 0.3em 0.6em;
+//     opacity: 0;
+//     pointer-events: none;
+//     transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+//     background: $color-primary-dark-2;
+//     z-index: -1;
+//     border-radius: 8px;
+//     scale: 0;
+//     transform-origin: 0 0;
+//     text-transform: capitalize;
+//     font-weight: 400;
+//     font-size: 16px;
+//     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+//   }
+  
+
+// .tooltip::before {
+//     position: absolute;
+//     content: "";
+//     height: 0.6em;
+//     width: 0.6em;
+//     bottom: -0.2em;
+//     left: 50%;
+//     transform: translate(-50%) rotate(45deg);
+//     background: $color-primary-dark-2;
+//   }
+
+// .icon__container:hover .tooltip {
+//     top: -180%;
+//     opacity: 1;
+//     visibility: visible;
+//     pointer-events: auto;
+//     scale: 1;
+//     animation: all 0.5s ease-in-out both;
+//     z-index: 5000;
+// }
+
 
